# cocos2d-x-ogre

./: README.md
cocos-x-ogre/cocos2d/encapsulation/: Android.mk  CMakeLists.txt
cocos-x-ogre/cocos2d/encapsulation/extension/: BonesAnimate3D.cpp  BonesAnimate3D.h  CameraBillBoard.cpp  CameraBillBoard.h  GroupNode3D.cpp  GroupNode3D.h  ScheduleAction.cpp  ScheduleAction.h  ScriptCallFuncHelper.cpp  ScriptCallFuncHelper.h
cocos-x-ogre/cocos2d/encapsulation/ogre/: OgreNodeProtocol.cpp  OgreNodeProtocol.h  OgreOgreManager.cpp  OgreOgreManager.h  OgreOgreSprite3D.cpp  OgreOgreSprite3D.h  OgreParticleSprite3D.cpp  OgreParticleSprite3D.h
cocos-x-ogre/cocos2d/encapsulation/ogre/components/: OgreBridgeBufferManager.cpp  OgreBridgeBufferManager.h  OgreBridgeFileSystemArchive.cpp  OgreBridgeFileSystemArchive.h  OgreBridgeGpuProgram.cpp  OgreBridgeGpuProgram.h  OgreBridgeGpuProgramManager.cpp  OgreBridgeGpuProgramManager.h  OgreBridgeImageCodec.cpp  OgreBridgeImageCodec.h  OgreBridgeRenderSystem.cpp  OgreBridgeRenderSystem.h  OgreBridgeRenderSystemPlugin.cpp  OgreBridgeRenderSystemPlugin.h  OgreBridgeSceneManager.cpp  OgreBridgeSceneManager.h  OgreBridgeTextureManager.cpp  OgreBridgeTextureManager.h  OgreBridgeWindow.cpp  OgreBridgeWindow.h
cocos-x-ogre/cocos2d/encapsulation/proj.win32/: encapsulation.vcxproj  encapsulation.vcxproj.filters
cocos-x-ogre/proj.android/: AndroidManifest.xml
cocos-x-ogre/proj.ios_mac/MyCppGame.xcodeproj/: project.pbxproj
cocos-x-ogre/proj.win32/: MyCppGame.sln
cocos-x-ogre/proj.win8.1-universal/: MyCppGame.sln
(+6 files in other folders)
